src/x-slider.css
/*
Consistency between navigation and pagination hover/active/focus styles
*/

:host {
  position: relative;

  display: flex;
  flex-direction: column;
  align-items: stretch;

  contain: content;

  --x-slider-gap: 16px;

  --x-slider-background-color: transparent;

  --x-slider-slide-min-height: 0px;
  --x-slider-slide-max-height: none;

  --x-slider-transition-duration: 0.6s;
  --x-slider-transition-timing-function: cubic-bezier(.25, .46, .45, .94);

  --x-slider-navigation-color: #000;
  --x-slider-navigation-background-color-active: #ddd;
  --x-slider-navigation-background-color-focus: #f0f0f0;
  --x-slider-navigation-button-size: 48px;
  --x-slider-navigation-icon-size: 24px;

  --x-slider-pagination-color: #999;
  --x-slider-pagination-color-selected: #000;
  --x-slider-pagination-size-clickable: 24px;
  --x-slider-pagination-size-dot: 8px;
  --x-slider-pagination-gap: 2px;
  --x-slider-pagination-height: 44px;
}

:host([hidden]) {
  display: none
}

:host-context(.js-focus-visible) :focus:not(.focus-visible),
:host-context(.js-focus-visible) ::slotted(*:focus:not(.focus-visible)) {
  outline: 0;
}

#externalWrapper {
  overflow: hidden;
  contain: paint;

  background-color: var(--x-slider-background-color);

  /*
    https://github.com/WICG/EventListenerOptions/blob/gh-pages/explainer.md
  */
  touch-action: pan-y pinch-zoom;
}

:host([drag]) #externalWrapper {
  cursor: grab;
}

:host([drag][pointer-down]) #externalWrapper {
  cursor: grabbing;
}

#slidesWrapper {
  display: flex;
  align-items: stretch;

  min-height: var(--x-slider-slide-min-height);
  max-height: var(--x-slider-slide-max-height);

  will-change: transform;

  --x-slider__internal__slides-per-view: 1;
}

:host([transitioning]) #slidesWrapper {
  transition-property: transform;
  transition-duration: var(--x-slider-transition-duration);
  transition-timing-function: var(--x-slider-transition-timing-function);
}

#pagination {
  display: none;
}

:host([pagination]) #pagination {
  align-self: center;

  display: flex;
  align-items: center;
  justify-content: center;

  height: var(--x-slider-pagination-height);
  min-height: var(--x-slider-pagination-size-clickable);

  contain: strict;

  font-size: 0;
}

#paginationSlot::slotted(button) {
  position: relative;

  width: var(--x-slider-pagination-size-clickable);
  height: var(--x-slider-pagination-size-clickable);

  margin: 0 calc(var(--x-slider-pagination-gap) / 2);
  padding: 0;

  border: none;
  background: none;

  font-size: inherit;

  cursor: pointer;

  opacity: .8;
}

#paginationSlot::slotted(button)::before,
#paginationSlot::slotted(button)::after {
  position: absolute;
  top: 50%;
  left: 50%;

  transform: translate(-50%, -50%);

  display: block;

  width: var(--x-slider-pagination-size-dot);
  height: var(--x-slider-pagination-size-dot);

  border-radius: 50%;

  background-color: var(--x-slider-pagination-color);

  content: '';
}

#paginationSlot::slotted(button)::before {
  transform: translate(-50%, -50%) scale(2);

  opacity: 0;

  will-change: opacity;
}

#paginationSlot::slotted(button:hover),
#paginationSlot::slotted(.disabled) {
  opacity: 1;
}

#paginationSlot::slotted(button:active)::before,
#paginationSlot::slotted(button.focus-visible)::before {
  opacity: .2;
}

#paginationSlot::slotted(.disabled)::after {
  background-color: var(--x-slider-pagination-color-selected);
}

#slidesSlot::slotted(*) {
  /* (100% - gap * (slidesPerView - 1)) / slidesPerView */
  flex: 0 0 calc((100% - (var(--x-slider__internal__slides-per-view) - 1) *
      var(--x-slider-gap)) / var(--x-slider__internal__slides-per-view));
  margin-right: var(--x-slider-gap);

  /*
   * Enforces the slides to keep their size even if the content requires
   * a bigger slide size.
   */
  overflow: hidden;

  outline: 0;
}

:host([drag]) #slidesSlot::slotted(*) {
  user-select: none;
}

#ariaSlot::slotted(*) {
  position: absolute;

  height: 1px;
  width: 1px;

  margin: -1px;
  padding: 0;

  clip: rect(0 0 0 0);

  overflow: hidden;

  border: 0;
}

#navigation {
  display: none;
}

:host([navigation]) #navigation {
  display: block;
}

#navigationSlot::slotted(button) {
  position: absolute;
  top: calc(50% - var(--x-slider-pagination-height) / 2);
  transform: translateY(-50%);

  display: flex;
  align-items: center;
  justify-content: center;

  min-width: var(--x-slider-navigation-button-size);
  min-height: var(--x-slider-navigation-button-size);
  padding: 0;

  background: none;
  border: 0;
  border-radius: 50%;

  overflow: hidden;

  cursor: pointer;
}

#navigationSlot::slotted(#previous) {
  left: 0;
}

#navigationSlot::slotted(#next) {
  right: 0;
}

#navigationSlot::slotted(button)::before,
#navigationSlot::slotted(button)::after {
  position: absolute;

  content: '';
}

#navigationSlot::slotted(button)::after {
  top: calc((var(--x-slider-navigation-button-size) - var(--x-slider-navigation-icon-size)) / 2);
  right: calc((var(--x-slider-navigation-button-size) - var(--x-slider-navigation-icon-size)) / 2);
  width: var(--x-slider-navigation-icon-size);
  height: var(--x-slider-navigation-icon-size);

  background-color: var(--x-slider-navigation-color);

  mask-image: svg-load('./arrow-left.svg', fill: #000);
}

#navigationSlot::slotted(#next)::after {
  transform: rotateZ(180deg);
}


#navigationSlot::slotted(button)::before {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  background-color: var(--x-slider-navigation-background-color-focus);

  opacity: 0;

  will-change: opacity;
}

#navigationSlot::slotted(button:hover)::before,
#navigationSlot::slotted(button:active)::before,
#navigationSlot::slotted(button:focus)::before,
:host-context(.js-focus-visible) #navigationSlot::slotted(button.focus-visible)::before {
  opacity: 1;
}

:host-context(.js-focus-visible) #navigationSlot::slotted(button:focus)::before {
  opacity: 0;
}

#navigationSlot::slotted(button[disabled]) {
  opacity: .2;
}

/*
 * Print styles:
 * - Show all slides and stack them vertically
 * - Eliminate the slide gap, show an outline
 * - make sure the page doesn't break a slide in half
 * - hide pagination and navigation buttons
 */

@media print {
  #slidesSlot::slotted(*) {
    margin-right: 0;
    margin-bottom: .2em;

    outline: 1px solid black;

    color: #000;

    page-break-inside: avoid;
  }

  /* Remove the navigational buttons, they provide no context in print */
   :host([navigation]) #navigation,
   :host([pagination]) #pagination {
    display: none;
  }

  /* Stack the slides */
  #slidesWrapper {
    display: block;

    transform: none !important;
    transition: 0s;
  }
}

